--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+
+    </style>
 </head>
 <body>
-  <h1>안녕하세요 케케</h1>
-    <h2>정가영 바보</h2>
+<div>
+    <div>
+        <h1>
+            TITLE
+        </h1>
+    </div>
+    <div id="map" style="width:1000px;height:800px;"></div>
+</div>
+
+
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5fb14902fabaae41358a760eed3d35e8"></script>
+<script>
+    var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
+    var options = { //지도를 생성할 때 필요한 기본 옵션
+        center: new kakao.maps.LatLng(35.15995278, 129.0553194), //지도의 중심좌표.
+        level: 3 //지도의 레벨(확대, 축소 정도)
+    };
+
+    var map = new kakao.maps.Map(container, options); //지도 생성 및 객체 리턴
+</script>
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=5fb14902fabaae41358a760eed3d35e8&libraries=services,clusterer,drawing"></script>
 </body>
 </html>
