--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -4,17 +4,27 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        * {
+            box-sizing: border-box;
+            font-size:14px;
+        }
+        #container{
+            display:flex;
+            flex-direction: column;
+            align-items: center;
 
+            margin: 10px auto;
+            width:1600px;
+            height:1200px;
+        }
     </style>
 </head>
 <body>
 <div>
-    <div>
-        <h1>
-            TITLE
-        </h1>
+    <div id="container">
+        <h1 class="main-title">TITLE</h1>
+        <div id="map" style="width:1000px;height:800px;"></div>
     </div>
-    <div id="map" style="width:1000px;height:800px;"></div>
 </div>
 
 
