--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -11,19 +11,23 @@
         #container{
             display:flex;
             flex-direction: column;
-            align-items: center;
+            align-items:center;
 
             margin: 10px auto;
             width:1600px;
             height:1200px;
         }
+        .main-title{
+            font-size: 30px;
+        }
+
     </style>
 </head>
 <body>
 <div>
     <div id="container">
         <h1 class="main-title">TITLE</h1>
-        <div id="map" style="width:1000px;height:800px;"></div>
+        <div id="map" style="width:800px;height:600px;"></div>
     </div>
 </div>
 
